--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body style="background-color: aquamarine;">
     <h1 style="text-align: center; color: blue;">home</h1>
-  <a href="./blog.html"  rel="noopener noreferrer">blog</a>
+  <a href="/545"  rel="noopener noreferrer">blog</a>
 </body>
 </html>
