--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href=https://sayedkhalil.github.io/test/" />
+
     <title>home</title>
 </head>
 <body style="background-color: aquamarine;">
     <h1 style="text-align: center; color: blue;">home</h1>
-  <a href="/545"  rel="noopener noreferrer">blog</a>
+  <a href="https://sayedkhalil.github.io/test/" >blog</a>
 </body>
 </html>
