--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body style="background-color: aquamarine;">
     <h1 style="text-align: center; color: blue;">home</h1>
-  <a href="https://sayedkhalil.github.io/test/home/" >blog</a>
+  <a href="./blog.html" >blog</a>
 </body>
 </html>
