--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>home</title>
 </head>
 <body style="background-color: aquamarine;">
-    <h1 style="text-align: center; color: blue;">home</h1>
+    <h1 id="x" style="text-align: center; color: blue;">home</h1>
   <a href="./blog.html" >blog</a>
+                       <script>
+var x = document.getElementById("demo");
+function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } else {
+    x.innerHTML = "Geolocation is not supported by this browser.";
+  }
+}
+
+function showPosition(position) {
+  x.innerHTML = "Latitude: " + position.coords.latitude +
+  "<br>Longitude: " + position.coords.longitude;
+}
+</script>
 </body>
 </html>
