--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body style="background-color: aquamarine;">
     <h1 id="x" style="text-align: center; color: blue;">home</h1>
+                                                       <bitton id="k">addddddddddd</button>
   <a href="./blog.html" >blog</a>
                        <script>
+                       document.getElementById("k").addEventListener("click",getLocation);
 var x = document.getElementById("demo");
 function getLocation() {
   if (navigator.geolocation) {
